kubernetes/application/rabbitmq.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbitmq
  namespace: link-shortener
spec:
  replicas: 1
  template:
    metadata:
      labels:
        name: rabbitmq
    spec:
      containers:
        - name: rabbitmq
          image: rabbitmq:3.12.13-alpine
  selector:
    matchLabels:
      name: rabbitmq
