kubernetes/application/rabbitmq.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq
  namespace: link-shortener
spec:
  type: ClusterIP
  ports:
    - port: 5672
  selector:
    name: rabbitmq
